# protobuf

./: .gitignore  pyproject.toml  sensors.proto  sensors_pb2.py
.github/workflows/: compile-proto.yml
compiled_cpp/: sensors.pb.cc  sensors.pb.h
cpp/: sensors.pb.cc  sensors.pb.h
rocketspond/: __init__.py  sensors_pb2.py
